fixing whitespace event calendar
the paragraph explaining what's happening needed a higher line height and the h3 in the same area needed less padding on the bottom

--- a/main.css
+++ b/main.css
@@ -126,6 +126,7 @@ h3{
 .event h3{
   color:white;
   font-weight: lighter;
+  margin-bottom: 10px;
 }
 
 .event p{
@@ -134,7 +135,7 @@ h3{
   font-weight: lighter;
   text-align: center;
   margin: 0px 16px;
-  line-height: 1.5;
+  line-height: 2;
 }
 
 #part4 .time h1 span{
